--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "knockout": "^3.4.2",
+    "animate.css": "^3.5.2"
+  }
 }
