--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "knockout": "^3.4.2",
-    "animate.css": "^3.5.2"
+    "animate.css": "^3.5.2",
+    "jquery": "^3.2.1"
   }
 }
