--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gulp-clean-css": "^3.4.1",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "knockout": "^3.4.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
